info2 material bkleinen/bkleinen.github.io@dfe8487990929367c12e3c96f814d52ae32cea31

--- a/classes/ws2021/info2/schedule/index.html
+++ b/classes/ws2021/info2/schedule/index.html
@@ -135,6 +135,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <th style=text-align:left>Lecture</th>
 <th style=text-align:left></th>
 <th style=text-align:left></th>
+<th style=text-align:left></th>
 <th style=text-align:left>Lab</th>
 <th style=text-align:left></th>
 </tr>
@@ -148,6 +149,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <td style=text-align:left>Introduction to the course</td>
 <td style=text-align:left><a href=../labs/lab-00>Getting back to programming, Tools</a></td>
 <td style=text-align:left></td>
+<td style=text-align:left></td>
 </tr>
 <tr>
 <td style=text-align:left></td>
@@ -155,6 +157,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <td style=text-align:left>Wed 06/10/2021</td>
 <td style=text-align:left>su_02</td>
 <td style=text-align:left>Review: Java Program, Interfaces, Parameters, Data Types and Control Structures, Classes, Arrays, Collections</td>
+<td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 </tr>
@@ -166,6 +169,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <td style=text-align:left>File-based IO, Exceptions (Lab 03)</td>
 <td style=text-align:left><a href=../labs/lab-01>Designing an Application, CRC Cards </a></td>
 <td style=text-align:left></td>
+<td style=text-align:left></td>
 </tr>
 <tr>
 <td style=text-align:left></td>
@@ -173,6 +177,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <td style=text-align:left>Wed 13/10/2021</td>
 <td style=text-align:left>su_04</td>
 <td style=text-align:left>Data Types: Lists</td>
+<td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 </tr>
@@ -184,6 +189,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <td style=text-align:left>Sets, Bags, Maps</td>
 <td style=text-align:left><a href=../labs/lab-02>Implementing CRC cards </a></td>
 <td style=text-align:left></td>
+<td style=text-align:left></td>
 </tr>
 <tr>
 <td style=text-align:left></td>
@@ -191,6 +197,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <td style=text-align:left>Wed 20/10/2021</td>
 <td style=text-align:left>su_06</td>
 <td style=text-align:left>Stacks</td>
+<td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 </tr>
@@ -202,6 +209,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <td style=text-align:left>Queues, Priority Queues</td>
 <td style=text-align:left><a href=../labs/lab-03>Histogram</a></td>
 <td style=text-align:left></td>
+<td style=text-align:left></td>
 </tr>
 <tr>
 <td style=text-align:left></td>
@@ -209,6 +217,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <td style=text-align:left>Wed 27/10/2021</td>
 <td style=text-align:left>su_08</td>
 <td style=text-align:left>Networking in Java (Prep. Lab 04)</td>
+<td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 </tr>
@@ -220,6 +229,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <td style=text-align:left>Concurrency</td>
 <td style=text-align:left><a href=../labs/lab-04>Chatterbox</a></td>
 <td style=text-align:left></td>
+<td style=text-align:left></td>
 </tr>
 <tr>
 <td style=text-align:left></td>
@@ -227,6 +237,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <td style=text-align:left>Wed 03/11/2021</td>
 <td style=text-align:left>su_10</td>
 <td style=text-align:left>Properties of Algorithms</td>
+<td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 </tr>
@@ -238,6 +249,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <td style=text-align:left>(fällt aus)</td>
 <td style=text-align:left><a href=../labs/lab-05>Execution Times</a></td>
 <td style=text-align:left></td>
+<td style=text-align:left></td>
 </tr>
 <tr>
 <td style=text-align:left></td>
@@ -245,6 +257,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <td style=text-align:left>Wed 10/11/2021</td>
 <td style=text-align:left>su_11</td>
 <td style=text-align:left>(e-learning Python)</td>
+<td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 </tr>
@@ -256,6 +269,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <td style=text-align:left>Python Intro & Recursion</td>
 <td style=text-align:left><a href=../labs/lab-06>Reverse Polish Notation</a></td>
 <td style=text-align:left></td>
+<td style=text-align:left></td>
 </tr>
 <tr>
 <td style=text-align:left></td>
@@ -263,6 +277,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <td style=text-align:left>Wed 17/11/2021</td>
 <td style=text-align:left>su_13</td>
 <td style=text-align:left>Maximum Contiguous Subsequence Sum</td>
+<td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 </tr>
@@ -274,6 +289,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <td style=text-align:left>Permutations (Permutations.java), Backtracking (TicTacToe.java),</td>
 <td style=text-align:left><a href=../labs/lab-07>Recursive Triangles</a></td>
 <td style=text-align:left></td>
+<td style=text-align:left></td>
 </tr>
 <tr>
 <td style=text-align:left></td>
@@ -281,6 +297,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <td style=text-align:left>Wed 24/11/2021</td>
 <td style=text-align:left>su_15</td>
 <td style=text-align:left>Trees</td>
+<td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 </tr>
@@ -292,6 +309,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <td style=text-align:left>Trees, AVL-Trees</td>
 <td style=text-align:left><a href=../labs/lab-08>Eight Queens</a></td>
 <td style=text-align:left></td>
+<td style=text-align:left></td>
 </tr>
 <tr>
 <td style=text-align:left></td>
@@ -301,14 +319,16 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <td style=text-align:left>Random numbers - Probabilistic Algorithms</td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
+<td style=text-align:left></td>
 </tr>
 <tr>
 <td style=text-align:left>10</td>
 <td style=text-align:left>49</td>
 <td style=text-align:left>Tue 07/12/2021</td>
 <td style=text-align:left>su_18</td>
-<td style=text-align:left>Graphs, Graph Algorithms</td>
+<td style=text-align:left>Graphs, Graph Algorithms - <a href=https://algs4.cs.princeton.edu/40graphs/>S./W.: Algorithms Ch. 4</a></td>
 <td style=text-align:left><a href=../labs/lab-09>Probabilistic Algorithms</a></td>
+<td style=text-align:left></td>
 <td style=text-align:left></td>
 </tr>
 <tr>
@@ -316,7 +336,8 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <td style=text-align:left></td>
 <td style=text-align:left>Wed 08/12/2021</td>
 <td style=text-align:left>su_19</td>
-<td style=text-align:left>Graph Algorithms, Quadtrees</td>
+<td style=text-align:left>Graph Algorithms - <a href=https://algs4.cs.princeton.edu/40graphs/>S./W.: Algorithms Ch. 4</a></td>
+<td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 </tr>
@@ -328,6 +349,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <td style=text-align:left>Finite State Automata</td>
 <td style=text-align:left><a href=../labs/lab-10>Getting from A to B</a></td>
 <td style=text-align:left></td>
+<td style=text-align:left></td>
 </tr>
 <tr>
 <td style=text-align:left></td>
@@ -335,6 +357,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <td style=text-align:left>Wed 15/12/2021</td>
 <td style=text-align:left>su_21</td>
 <td style=text-align:left>Fun with Python</td>
+<td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 </tr>
@@ -346,6 +369,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <td style=text-align:left>Fun with Python</td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
+<td style=text-align:left></td>
 </tr>
 <tr>
 <td style=text-align:left></td>
@@ -353,6 +377,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <td style=text-align:left>Wed 22/12/2021</td>
 <td style=text-align:left>su_23</td>
 <td style=text-align:left>&mdash; no lecture &mdash;</td>
+<td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 </tr>
@@ -364,6 +389,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <td style=text-align:left>&mdash; no lecture &mdash;</td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
+<td style=text-align:left></td>
 </tr>
 <tr>
 <td style=text-align:left></td>
@@ -371,6 +397,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <td style=text-align:left>Wed 29/12/2021</td>
 <td style=text-align:left>su_25</td>
 <td style=text-align:left>&mdash; no lecture &mdash;</td>
+<td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 </tr>
@@ -382,6 +409,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <td style=text-align:left>Sorting</td>
 <td style=text-align:left><a href=../labs/lab-11>Finite State Automata and Sorting</a></td>
 <td style=text-align:left></td>
+<td style=text-align:left></td>
 </tr>
 <tr>
 <td style=text-align:left></td>
@@ -389,6 +417,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <td style=text-align:left>Wed 05/01/2022</td>
 <td style=text-align:left>su_27</td>
 <td style=text-align:left>Heapsort (Handout-heap - Heapsort.java), Searching. Nearest Neighbor, Branch and Bound</td>
+<td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 </tr>
@@ -400,6 +429,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <td style=text-align:left>Hashing</td>
 <td style=text-align:left><a href=../labs/lab-12>Scrabble Cheater</a></td>
 <td style=text-align:left></td>
+<td style=text-align:left></td>
 </tr>
 <tr>
 <td style=text-align:left></td>
@@ -407,6 +437,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <td style=text-align:left>Wed 12/01/2022</td>
 <td style=text-align:left>su_29</td>
 <td style=text-align:left>String Searching</td>
+<td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 </tr>
@@ -418,6 +449,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <td style=text-align:left>NP-Complete Problems</td>
 <td style=text-align:left><a href=../labs/lab-13>Scrabble Cheater Deluxe</a></td>
 <td style=text-align:left></td>
+<td style=text-align:left></td>
 </tr>
 <tr>
 <td style=text-align:left></td>
@@ -425,6 +457,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <td style=text-align:left>Wed 19/01/2022</td>
 <td style=text-align:left>su_31</td>
 <td style=text-align:left>TBD:** Unicode (The Absolute Minimum Every Software Developer &mldr; Must Know About Unicode &mldr;), Cryptographic Algorithms</td>
+<td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 </tr>
@@ -436,6 +469,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <td style=text-align:left>TBD:** ADTs and the Julian Date, How to Solve It</td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
+<td style=text-align:left></td>
 </tr>
 <tr>
 <td style=text-align:left></td>
@@ -443,6 +477,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <td style=text-align:left>Wed 26/01/2022</td>
 <td style=text-align:left>su_33</td>
 <td style=text-align:left>PZ1</td>
+<td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 </tr>
@@ -454,6 +489,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <td style=text-align:left>PZ1</td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
+<td style=text-align:left></td>
 </tr>
 <tr>
 <td style=text-align:left></td>
@@ -461,6 +497,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <td style=text-align:left>Wed 02/02/2022</td>
 <td style=text-align:left>su_35</td>
 <td style=text-align:left>PZ1</td>
+<td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 </tr>
@@ -472,6 +509,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <td style=text-align:left>PZ1</td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
+<td style=text-align:left></td>
 </tr>
 <tr>
 <td style=text-align:left></td>
@@ -479,6 +517,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <td style=text-align:left>Wed 09/02/2022</td>
 <td style=text-align:left>su_37</td>
 <td style=text-align:left>PZ1</td>
+<td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 </tr>
