--- a/classes/ws2021/m-wt1-webapplications/assignments/_assignments/index.html
+++ b/classes/ws2021/m-wt1-webapplications/assignments/_assignments/index.html
@@ -1,7 +1,6 @@
 <!doctype html><html>
 <head>
-<meta name=generator content="Hugo 0.90.1">
-<title>Prof. Dr. Barne Kleinen - STAGING DRAFTS --- Prof. Dr. Barne Kleinen</title>
+<title>Web Applications WS2021/2022 - Graded Assignments - STAGING DRAFTS --- Prof. Dr. Barne Kleinen</title>
 <link rel=icon href=https://bkleinen.github.io/stagingdrafts//favicon.ico>
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no">
@@ -28,7 +27,7 @@ running on <a href=https://bkleinen.github.io/stagingdrafts/>https://bkleinen.gi
 <div class="col-md-10 c1 p-2"><div class=container-flex>
 <div class=row>
 <div class=col-9>
-<h1 class="c5 title"> Prof. Dr. Barne Kleinen </h1>
+<h1 class="c5 title"> WT1 Web Applications WS 2021/22 </h1>
 <small>Website of <a href=https://bkleinen.github.io/stagingdrafts//>Prof. Dr. Barne Kleinen</a>, Professor for Media Informatics
 (<a href=https://imi-bachelor.htw-berlin.de>Bachelor</a>/<a href=https://imi-master.htw-berlin.de>Master</a>)
 at <a href=https://www.htw-berlin.de>HTW Berlin</a>
@@ -45,10 +44,10 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <div class=nav>
 <ul class="nav flex-md-column">
 <li class=nav-item>
-<a class="nav-link active" href=https://bkleinen.github.io/stagingdrafts/>Home</a>
+<a class=nav-link href=https://bkleinen.github.io/stagingdrafts/>Home</a>
 </li>
 <li class=nav-item>
-<a class="nav-link dropdown-toggle" data-bs-toggle=dropdown href=# role=button aria-expanded=false>Classes</a>
+<a class="nav-link dropdown-toggle active" data-bs-toggle=dropdown href=# role=button aria-expanded=false>Classes</a>
 <div class=dropdown-menu>
 <a class=dropdown-item href=https://bkleinen.github.io/stagingdrafts/classes/ws2021/info2/>B7 Info 2</a>
 <a class=dropdown-item href=https://bkleinen.github.io/stagingdrafts/classes/ws2021/networks/>B9 Networks</a>
@@ -92,56 +91,97 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <div class=outer>
 <nav aria-label=breadcrumb role=navigation>
 <ol class="breadcrumb breadcrumb-thin">
-<li class="breadcrumb-item active" aria-current=page>Home</li>
+<li class=breadcrumb-item><a href=https://bkleinen.github.io/stagingdrafts/>Home</a></li>
+<li class=breadcrumb-item><a href=https://bkleinen.github.io/stagingdrafts/classes/>classes</a></li>
+<li class=breadcrumb-item><a href=https://bkleinen.github.io/stagingdrafts/classes/ws2021/>ws2021</a></li>
+<li class=breadcrumb-item><a href=https://bkleinen.github.io/stagingdrafts/classes/ws2021/m-wt1-webapplications/>m-wt1-webapplications</a></li>
+<li class="breadcrumb-item active" aria-current=page>_assignments</li>
 </ol>
 </nav>
 </div>
 <div class=coursenav>
 <ul class="nav nav-tabs">
 <li class=nav-item>
-<a class=nav-link href="https://moodle.htw-berlin.de/course/view.php?id=21638">IMI-FAQ</a>
-</li><li class=nav-item>
-<a class=nav-link href=https://imi-map.f4.htw-berlin.de/>IMI-Map</a>
-</li><li class=nav-item>
-<a class=nav-link href=https://wiki.htw-berlin.de/confluence/display/fb4imi/FB4+Internationale+Medieninformatik>IMI-Wiki</a>
-</li><li class=nav-item>
-<a class=nav-link href=https://imi-blog.de/>IMI-Blog</a>
+<a class=nav-link href=https://bkleinen.github.io/stagingdrafts/classes/ws2021/m-wt1-webapplications/>M-WT1</a>
+</li>
+<li class=nav-item>
+<a class=nav-link href=https://bkleinen.github.io/stagingdrafts/classes/ws2021/m-wt1-webapplications/schedule/>Schedule</a>
+</li>
+<li class=nav-item>
+<a class=nav-link href=https://bkleinen.github.io/stagingdrafts/classes/ws2021/m-wt1-webapplications/sprint/>Sprint</a>
+</li>
+<li class=nav-item>
+<a class="nav-link active" href=https://bkleinen.github.io/stagingdrafts/classes/ws2021/m-wt1-webapplications/assignments/>Assignments</a>
+</li>
+<li class="nav-item dropdown">
+<a class="nav-link dropdown-toggle" data-bs-toggle=dropdown href=# role=button aria-expanded=false>External Links</a>
+<div class=dropdown-menu>
+<a class=dropdown-item target=ex_link href="https://moodle.htw-berlin.de/course/view.php?id=33322">Moodle</a>
+<a class=dropdown-item target=ex_link href="https://lsf.htw-berlin.de/qisserver/rds?state=wsearchv&search=2&veranstaltung.veranstid=178201">LSF</a>
+<a class=dropdown-item target=ex_link href="https://lsf.htw-berlin.de/qisserver/rds?state=wplan&act=stg&pool=stg&show=plan&P.vx=kurz&r_zuordabstgv.semvonint=1&r_zuordabstgv.sembisint=4&k_abstgv.abstgvnr=312">Semesterstundenplan im LSF</a>
+<a class=dropdown-item target=ex_link href=https://github.com/htw-imi-wt1-ws2021>GitHub Organization</a>
+<a class=dropdown-item target=ex_link href=https://github.com/imiwebtec>GitHub Book</a>
+</div>
 </li>
 </ul>
 </div>
 <div class=container-fluid>
-<div class=box>
-<h4>Classes Winter Term 2021</h4>
-<div>
-<div class="col-12 col-md-6 mb-2">
+<h2 class=followed> Web Applications WS2021/2022 - Graded Assignments</h2>
+<header class=following>
+<a data-bs-toggle=collapse href=#tocContent role=button aria-expanded=false aria-controls=tocContent>
+Table of Contents
+</a>
+&nbsp;&nbsp;&nbsp;&nbsp;
+<a href=https://bkleinen.github.io/stagingdrafts/classes/ws2021/m-wt1-webapplications/schedule/>&lt;prev</a>
+</header>
+<div class=collapse id=tocContent>
+<nav id=TableOfContents>
 <ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/classes/ws2021/info2/>B7 Informatics 2 WS 2021/22</a></li>
-<li><a href=https://bkleinen.github.io/stagingdrafts/classes/ws2021/networks/>B9 Networks WS 2021/22</a></li>
-<li><a href=https://bkleinen.github.io/stagingdrafts/classes/ws2021/project/>B4 Projekt: Bessere Wahlpflichtkursbelegung</a></li>
-<li><a href=https://bkleinen.github.io/stagingdrafts/classes/ws2021/m1-web/>M1 Media Programming</a></li>
-<li><a href=https://bkleinen.github.io/stagingdrafts/classes/ws2021/m-wt1-webapplications/>WT1 Web Applications WS 2021/22</a></li>
-<li><a href=https://bkleinen.github.io/stagingdrafts/classes/ws2021/theses/>Theses</a></li>
+<li><a href=#graded-assignments--mon-1930>Graded Assignments / Mon 19:30</a></li>
+<li><a href=#1-project-descriptions--technical-challenge>1. Project Descriptions / Technical Challenge</a></li>
+<li><a href=#2-cicd>2. CI/CD</a></li>
+<li><a href=#infrastructure-parts-one-for-each-group>Infrastructure Parts (one for each group)</a></li>
 </ul>
+</nav>
 </div>
-</div>
-<a href=https://bkleinen.github.io/stagingdrafts//classes/>All Classes (Archive)</a>
-<br><br>
-</div>
-<div class=box>
-<h4>Thesis</h4>
-<p>There is also some info here if you consider writing your <a href=studies/thesis/>Thesis</a> or <a href=studies/ic/>Independent Coursework</a> with me.</p>
-</div>
-<div class=box>
-<h4>Office Hours</h4><p>Office Hours in WS 2021/22: usually Thursdays 14:30-15:30<br>
-in my office or via <a href>Zoom</a>, simply in the order
-<a href=https://wiki.htw-berlin.de/confluence/display/fb4crskleinen/Office+Hours+Prof.+Kleinen>
-you've registered in the wiki.
-</a></p>
-<br>
-</div>
-<div class=below>
-&nbsp;
-</div>
+<h2 id=graded-assignments--mon-1930>Graded Assignments / Mon 19:30</h2>
+<ol>
+<li>Project Descriptions / Technical Challenge</li>
+<li>CI/CD Documentation</li>
+<li>Book Chapters for Review</li>
+<li>(Peer-) Reviews of Book Chapters</li>
+<li>Usability Assessments</li>
+<li>Security Assessments</li>
+<li>Final Book Chapters</li>
+<li>Documentation of Infrastructure-Part</li>
+<li>Final Project Documentation</li>
+</ol>
+<h2 id=1-project-descriptions--technical-challenge>1. Project Descriptions / Technical Challenge</h2>
+<p>Outline your Project. Include</p>
+<ul>
+<li>Names of all Contributers</li>
+<li>Technological Challenge</li>
+<li>Technical Design</li>
+</ul>
+<h2 id=2-cicd>2. CI/CD</h2>
+<ul>
+<li>Set up Continuous Integration with
+<ul>
+<li>Automated Tests</li>
+<li>Code Quality Assurance</li>
+</ul>
+</li>
+<li>Set up Continuous Deployment to HTW Server using Docker Containers</li>
+</ul>
+<h2 id=infrastructure-parts-one-for-each-group>Infrastructure Parts (one for each group)</h2>
+<ol>
+<li>Server Setup and Administration</li>
+<li>Hugo Setup and Administration</li>
+<li>Overview Page Webbook</li>
+<li>Overview Page Projects</li>
+<li>Git Repos Organisation</li>
+<li>Overview Page CI/CD Pipelines</li>
+</ol>
 </div>
 </div>
 </div>
@@ -170,9 +210,7 @@ you've registered in the wiki.
 <div class=col-9>
 This work is licensed under a <a rel=license href=http://creativecommons.org/licenses/by-nc/4.0/>Creative Commons Attribution-NonCommercial 4.0 International License</a>.
 <br><small>
-This page was authored by: B. Kleinen
-Version: e173a412
-deployed by workflow: Deploy Staging Drafts
+This page was authored by: kleinen
 </small>
 </div>
 <div class=col-3>
