--- a/classes/ws2021/info2/labs/lab-11/index.html
+++ b/classes/ws2021/info2/labs/lab-11/index.html
@@ -140,12 +140,13 @@ Table of Contents
 <nav id=TableOfContents>
 <ul>
 <li><a href=#pre-lab>Pre-Lab</a></li>
-<li><a href=#assignment>Assignment</a>
+<li><a href=#assignment-1-finite-automata>Assignment 1: Finite Automata</a>
 <ul>
-<li><a href=#part-1-finite-automata>Part 1: Finite Automata</a></li>
-<li><a href=#part-2-sorting>Part 2: Sorting</a></li>
+<li><a href=#exercise-1-understand-finite-automata>Exercise 1: Understand Finite Automata</a></li>
+<li><a href=#exercise-2-design-finite-automata>Exercise 2: Design Finite Automata</a></li>
 </ul>
 </li>
+<li><a href=#assignment-2-sorting>Assignment 2: Sorting</a></li>
 <li><a href=#lab-report--what-to-turn-in>Lab Report / What to turn in</a></li>
 </ul>
 </nav>
@@ -161,10 +162,9 @@ Table of Contents
 <li><a href=https://youtu.be/uXBnyYuwPe8>Quick Sort</a></li>
 <li><a href=https://youtu.be/k72DtCnY4MU>Heap Sort</a></li>
 </ul>
-<h2 id=assignment>Assignment</h2>
-<h3 id=part-1-finite-automata>Part 1: Finite Automata</h3>
+<h2 id=assignment-1-finite-automata>Assignment 1: Finite Automata</h2>
 <p>This is to get some practice with Finite Automata.</p>
-<h4 id=a-understand-finite-automata>A: Understand Finite Automata</h4>
+<h3 id=exercise-1-understand-finite-automata>Exercise 1: Understand Finite Automata</h3>
 <p>The following two Finite Automata are given by their transition tables:</p>
 <p><strong>Automaton A</strong>
 Start state: q0, accept state: q0</p>
@@ -232,23 +232,17 @@ Start state: q1, accept states: q2, q4</p>
 </tr>
 </tbody>
 </table>
-<ol>
-<li>Draw transition diagrams for all two Finite Automatas and describe the language they accept in English (or German) sentences. Are they DFA or NFA?</li>
-<li>What are words in and not in the language? Create Simulations for both Finite Automata with fitting words as test cases. You can use <a href=https://github.com/htw-imi-info2/Lab11_DFA/blob/master/test/examples/NFA1AtThirdFromLast.java>NFA1AtThirdFromLast.java</a> as an example. You find an NFA Simulator in <a href=https://github.com/htw-imi-info2/Lab11_DFA>https://github.com/htw-imi-info2/Lab11_DFA</a>.</li>
-</ol>
-<h4 id=b-design-finite-automata>B: Design Finite Automata</h4>
+<p>a) Draw transition diagrams for all two Finite Automatas and describe the language they accept in English (or German) sentences. Are they DFA or NFA?
+b) What are words in and not in the language? Create Simulations for both Finite Automata with fitting words as test cases. You can use <a href=https://github.com/htw-imi-info2/Lab11_DFA/blob/master/test/examples/NFA1AtThirdFromLast.java>NFA1AtThirdFromLast.java</a> as an example. You find an NFA Simulator in <a href=https://github.com/htw-imi-info2/Lab11_DFA>https://github.com/htw-imi-info2/Lab11_DFA</a>.</p>
+<h3 id=exercise-2-design-finite-automata>Exercise 2: Design Finite Automata</h3>
 <p>The following three Finite Automata are given by their description:</p>
 <p><strong>Automaton C</strong>: The Finite Automaton accepts all strings of 0&rsquo;s and 1&rsquo;s not containing 010 as a substring.</p>
 <p><strong>Automaton D</strong>: The Finite Automaton that accepts all strings with at most one pair of consecutive 0&rsquo;s and at most one pair of consecutive 1&rsquo;s.</p>
 <p><strong>Automaton E</strong>: The Finite Automaton that accepts the language of all Strings of 0 and 1s, that when interpreted as a binary number, are divisible by three.</p>
-<ol start=2>
-<li>Define the given Finite Automata and fitting test cases. Draw transition diagrams for all three Finite Automata. Are they DFA or NFA?</li>
-<li>Test your automata by using the simulator above. Again, you can use <a href=https://github.com/htw-imi-info2/Lab11_DFA/blob/master/test/examples/NFA1AtThirdFromLast.java>NFA1AtThirdFromLast.java</a> as an example.</li>
-</ol>
-<h3 id=part-2-sorting>Part 2: Sorting</h3>
-<ol start=4>
-<li>Generate an array (on paper) containing 10 random integers between 1 and 100 and perform <em>manual</em> walkthroughs of the 5 sorting algorithms given at <a href=https://github.com/htw-imi-info2/Lab11_Sorting>https://github.com/htw-imi-info2/Lab11_Sorting</a>. Each persone should do at least one walkthrough. Use the exact algorithms from the repository.</li>
-</ol>
+<p>a) Define the given Finite Automata and fitting test cases. Draw transition diagrams for all three Finite Automata. Are they DFA or NFA?
+b) Test your automata by using the simulator above. Again, you can use <a href=https://github.com/htw-imi-info2/Lab11_DFA/blob/master/test/examples/NFA1AtThirdFromLast.java>NFA1AtThirdFromLast.java</a> as an example.</p>
+<h2 id=assignment-2-sorting>Assignment 2: Sorting</h2>
+<p>Generate an array (on paper) containing 10 random integers between 1 and 100 and perform <em>manual</em> walkthroughs of the 5 sorting algorithms given at <a href=https://github.com/htw-imi-info2/Lab11_Sorting>https://github.com/htw-imi-info2/Lab11_Sorting</a>. Each person should do at least one walkthrough. Use the exact algorithms from the repository.</p>
 <h2 id=lab-report--what-to-turn-in>Lab Report / What to turn in</h2>
 <p>All info on the lab reports can be found on the <a href=https://bkleinen.github.io/stagingdrafts/classes/ws2021/info2/labs/>Labs</a> page.</p>
 <p>Also answer the following questions in your report:</p>
