info2 schedule update bkleinen/bkleinen.github.io@2bacc36b80be0e16d56725a0ea22fdb990e0a19c

--- a/classes/ws2021/info2/schedule/index.html
+++ b/classes/ws2021/info2/schedule/index.html
@@ -387,7 +387,7 @@ Table of Contents
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left>Wed 22/12/2021</td>
-<td style=text-align:left>su_23</td>
+<td style=text-align:left></td>
 <td style=text-align:left>&mdash; no lecture &mdash;</td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
@@ -397,7 +397,7 @@ Table of Contents
 <td style=text-align:left></td>
 <td style=text-align:left>52</td>
 <td style=text-align:left>Tue 28/12/2021</td>
-<td style=text-align:left>su_24</td>
+<td style=text-align:left></td>
 <td style=text-align:left>&mdash; no lecture &mdash;</td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
@@ -407,7 +407,7 @@ Table of Contents
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left>Wed 29/12/2021</td>
-<td style=text-align:left>su_25</td>
+<td style=text-align:left></td>
 <td style=text-align:left>&mdash; no lecture &mdash;</td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
@@ -417,8 +417,8 @@ Table of Contents
 <td style=text-align:left>13</td>
 <td style=text-align:left>1</td>
 <td style=text-align:left>Tue 04/01/2022</td>
-<td style=text-align:left>su_26</td>
-<td style=text-align:left>Fun with Python</td>
+<td style=text-align:left></td>
+<td style=text-align:left>no lecture</td>
 <td style=text-align:left><a href=../labs/lab-11>Finite State Automata and Sorting</a></td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
@@ -427,8 +427,8 @@ Table of Contents
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left>Wed 05/01/2022</td>
-<td style=text-align:left>su_27</td>
-<td style=text-align:left>Searching</td>
+<td style=text-align:left></td>
+<td style=text-align:left>no lecture</td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
@@ -437,8 +437,8 @@ Table of Contents
 <td style=text-align:left>14</td>
 <td style=text-align:left>2</td>
 <td style=text-align:left>Tue 11/01/2022</td>
-<td style=text-align:left>su_28</td>
-<td style=text-align:left>Hashing</td>
+<td style=text-align:left>su_23 su_24</td>
+<td style=text-align:left>Searching + String Searching</td>
 <td style=text-align:left><a href=../labs/lab-12>Scrabble Cheater</a></td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
@@ -447,8 +447,8 @@ Table of Contents
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left>Wed 12/01/2022</td>
-<td style=text-align:left>su_29</td>
-<td style=text-align:left>String Searching</td>
+<td style=text-align:left>su_25</td>
+<td style=text-align:left>Hashing, see also <a href=https://algs4.cs.princeton.edu/34hash/>Hash Tables</a></td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
@@ -457,8 +457,8 @@ Table of Contents
 <td style=text-align:left>15</td>
 <td style=text-align:left>3</td>
 <td style=text-align:left>Tue 18/01/2022</td>
-<td style=text-align:left>su_30</td>
-<td style=text-align:left>NP-Complete Problems</td>
+<td style=text-align:left></td>
+<td style=text-align:left>Exam Info & Preparation</td>
 <td style=text-align:left><a href=../labs/lab-13>Scrabble Cheater Deluxe</a></td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
@@ -467,8 +467,8 @@ Table of Contents
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left>Wed 19/01/2022</td>
-<td style=text-align:left>su_31</td>
-<td style=text-align:left>TBD:** Unicode (The Absolute Minimum Every Software Developer &mldr; Must Know About Unicode &mldr;), Cryptographic Algorithms</td>
+<td style=text-align:left>su_26</td>
+<td style=text-align:left>Character Encodings/Unicode (The Absolute Minimum Every Software Developer &mldr; Must Know About Unicode &mldr;) , I18n, , Cryptographic Algorithms</td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
@@ -477,8 +477,8 @@ Table of Contents
 <td style=text-align:left>16</td>
 <td style=text-align:left>4</td>
 <td style=text-align:left>Tue 25/01/2022</td>
-<td style=text-align:left>su_32</td>
-<td style=text-align:left>TBD:** ADTs and the Julian Date, How to Solve It</td>
+<td style=text-align:left></td>
+<td style=text-align:left>Exam PZ 1</td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
@@ -487,8 +487,8 @@ Table of Contents
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left>Wed 26/01/2022</td>
-<td style=text-align:left>su_33</td>
-<td style=text-align:left>PZ1</td>
+<td style=text-align:left></td>
+<td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
@@ -497,8 +497,8 @@ Table of Contents
 <td style=text-align:left>17</td>
 <td style=text-align:left>5</td>
 <td style=text-align:left>Tue 01/02/2022</td>
-<td style=text-align:left>su_34</td>
-<td style=text-align:left>PZ1</td>
+<td style=text-align:left></td>
+<td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
@@ -507,8 +507,8 @@ Table of Contents
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left>Wed 02/02/2022</td>
-<td style=text-align:left>su_35</td>
-<td style=text-align:left>PZ1</td>
+<td style=text-align:left></td>
+<td style=text-align:left>Klausureinsicht</td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
@@ -517,8 +517,8 @@ Table of Contents
 <td style=text-align:left>18</td>
 <td style=text-align:left>6</td>
 <td style=text-align:left>Tue 08/02/2022</td>
-<td style=text-align:left>su_36</td>
-<td style=text-align:left>PZ1</td>
+<td style=text-align:left></td>
+<td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
@@ -527,16 +527,6 @@ Table of Contents
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left>Wed 09/02/2022</td>
-<td style=text-align:left>su_37</td>
-<td style=text-align:left>PZ1</td>
-<td style=text-align:left></td>
-<td style=text-align:left></td>
-<td style=text-align:left></td>
-</tr>
-<tr>
-<td style=text-align:left></td>
-<td style=text-align:left></td>
-<td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
