--- a/classes/ws2021/networks/schedule/index.html
+++ b/classes/ws2021/networks/schedule/index.html
@@ -149,7 +149,6 @@ Table of Contents
 <th style=text-align:left>Datum</th>
 <th style=text-align:left>Lecture</th>
 <th style=text-align:left>Lab</th>
-<th style=text-align:left></th>
 </tr>
 </thead>
 <tbody>
@@ -159,14 +158,12 @@ Table of Contents
 <td style=text-align:left>Wed 06/10/2021</td>
 <td style=text-align:left></td>
 <td style=text-align:left>none</td>
-<td style=text-align:left></td>
 </tr>
 <tr>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left>Thu 07/10/2021</td>
 <td style=text-align:left>Class Intro</td>
-<td style=text-align:left></td>
 <td style=text-align:left></td>
 </tr>
 <tr>
@@ -175,14 +172,12 @@ Table of Contents
 <td style=text-align:left>Wed 13/10/2021</td>
 <td style=text-align:left></td>
 <td style=text-align:left><a href=../labs/lab00_intro>Lab 0 - Intro</a></td>
-<td style=text-align:left></td>
 </tr>
 <tr>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left>Thu 14/10/2021</td>
 <td style=text-align:left>Computer Networks and the Internet: <a href=https://gaia.cs.umass.edu/kurose_ross/videos/1/>1.1-1.4</a></td>
-<td style=text-align:left></td>
 <td style=text-align:left></td>
 </tr>
 <tr>
@@ -191,14 +186,12 @@ Table of Contents
 <td style=text-align:left>Wed 20/10/2021</td>
 <td style=text-align:left></td>
 <td style=text-align:left><a href=../labs/lab00_intro>Lab 0 - Intro</a></td>
-<td style=text-align:left></td>
 </tr>
 <tr>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left>Thu 21/10/2021</td>
 <td style=text-align:left>Computer Networks and the Internet: <a href=https://gaia.cs.umass.edu/kurose_ross/videos/1/>1.5-1.7</a></td>
-<td style=text-align:left></td>
 <td style=text-align:left></td>
 </tr>
 <tr>
@@ -207,14 +200,12 @@ Table of Contents
 <td style=text-align:left>Wed 27/10/2021</td>
 <td style=text-align:left></td>
 <td style=text-align:left>1</td>
-<td style=text-align:left></td>
 </tr>
 <tr>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left>Thu 28/10/2021</td>
 <td style=text-align:left>Server Setup and the Shell</td>
-<td style=text-align:left></td>
 <td style=text-align:left></td>
 </tr>
 <tr>
@@ -223,14 +214,12 @@ Table of Contents
 <td style=text-align:left>Wed 03/11/2021</td>
 <td style=text-align:left></td>
 <td style=text-align:left>1</td>
-<td style=text-align:left></td>
 </tr>
 <tr>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left>Thu 04/11/2021</td>
 <td style=text-align:left>Application Layer: <a href=https://gaia.cs.umass.edu/kurose_ross/videos/2/>2.1-2.3, 2.7</a></td>
-<td style=text-align:left></td>
 <td style=text-align:left></td>
 </tr>
 <tr>
@@ -239,14 +228,12 @@ Table of Contents
 <td style=text-align:left>Wed 10/11/2021</td>
 <td style=text-align:left></td>
 <td style=text-align:left>2</td>
-<td style=text-align:left></td>
 </tr>
 <tr>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left>Thu 11/11/2021</td>
 <td style=text-align:left>Application Layer: <a href=https://gaia.cs.umass.edu/kurose_ross/videos/2/>2.4-2.6</a></td>
-<td style=text-align:left></td>
 <td style=text-align:left></td>
 </tr>
 <tr>
@@ -255,14 +242,12 @@ Table of Contents
 <td style=text-align:left>Wed 17/11/2021</td>
 <td style=text-align:left></td>
 <td style=text-align:left>(2)</td>
-<td style=text-align:left></td>
 </tr>
 <tr>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left>Thu 18/11/2021</td>
 <td style=text-align:left>Transport Layer: <a href=https://gaia.cs.umass.edu/kurose_ross/videos/3/>3.1-3.4</a></td>
-<td style=text-align:left></td>
 <td style=text-align:left></td>
 </tr>
 <tr>
@@ -271,14 +256,12 @@ Table of Contents
 <td style=text-align:left>Wed 24/11/2021</td>
 <td style=text-align:left></td>
 <td style=text-align:left>2 Abgabe : Fr</td>
-<td style=text-align:left></td>
 </tr>
 <tr>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left>Thu 25/11/2021</td>
 <td style=text-align:left>Transport Layer: <a href=https://gaia.cs.umass.edu/kurose_ross/videos/3/>3.5-3.8</a></td>
-<td style=text-align:left></td>
 <td style=text-align:left></td>
 </tr>
 <tr>
@@ -287,14 +270,12 @@ Table of Contents
 <td style=text-align:left>Wed 01/12/2021</td>
 <td style=text-align:left></td>
 <td style=text-align:left>3</td>
-<td style=text-align:left></td>
 </tr>
 <tr>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left>Thu 02/12/2021</td>
 <td style=text-align:left>The Network Layer: Data Plane <a href=https://gaia.cs.umass.edu/kurose_ross/videos/4/>4.1-4.2</a></td>
-<td style=text-align:left></td>
 <td style=text-align:left></td>
 </tr>
 <tr>
@@ -303,14 +284,12 @@ Table of Contents
 <td style=text-align:left>Wed 08/12/2021</td>
 <td style=text-align:left></td>
 <td style=text-align:left>3/4 Abgabe : Fr</td>
-<td style=text-align:left></td>
 </tr>
 <tr>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left>Thu 09/12/2021</td>
 <td style=text-align:left>The Network Layer: Data Plane <a href=https://gaia.cs.umass.edu/kurose_ross/videos/4/>4.3-4.5</a></td>
-<td style=text-align:left></td>
 <td style=text-align:left></td>
 </tr>
 <tr>
@@ -319,14 +298,12 @@ Table of Contents
 <td style=text-align:left>Wed 15/12/2021</td>
 <td style=text-align:left></td>
 <td style=text-align:left>4 Abgabe: Tue</td>
-<td style=text-align:left></td>
 </tr>
 <tr>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left>Thu 16/12/2021</td>
 <td style=text-align:left>The Network Layer: Control Plane <a href=https://gaia.cs.umass.edu/kurose_ross/videos/5/>5.1-5.4</a></td>
-<td style=text-align:left></td>
 <td style=text-align:left></td>
 </tr>
 <tr>
@@ -335,14 +312,12 @@ Table of Contents
 <td style=text-align:left>Wed 22/12/2021</td>
 <td style=text-align:left></td>
 <td style=text-align:left>&ndash;</td>
-<td style=text-align:left></td>
 </tr>
 <tr>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left>Thu 23/12/2021</td>
 <td style=text-align:left>Vorlesungsfrei</td>
-<td style=text-align:left></td>
 <td style=text-align:left></td>
 </tr>
 <tr>
@@ -351,7 +326,6 @@ Table of Contents
 <td style=text-align:left>Wed 29/12/2021</td>
 <td style=text-align:left>Vorlesungsfrei</td>
 <td style=text-align:left>&ndash;</td>
-<td style=text-align:left></td>
 </tr>
 <tr>
 <td style=text-align:left></td>
@@ -359,14 +333,12 @@ Table of Contents
 <td style=text-align:left>Thu 30/12/2021</td>
 <td style=text-align:left>Vorlesungsfrei</td>
 <td style=text-align:left></td>
-<td style=text-align:left></td>
 </tr>
 <tr>
 <td style=text-align:left>13</td>
 <td style=text-align:left>1</td>
 <td style=text-align:left>Wed 05/01/2022</td>
 <td style=text-align:left></td>
-<td style=text-align:left>5</td>
 <td style=text-align:left></td>
 </tr>
 <tr>
@@ -375,7 +347,6 @@ Table of Contents
 <td style=text-align:left>Thu 06/01/2022</td>
 <td style=text-align:left>The Network Layer: Control Plane <a href=https://gaia.cs.umass.edu/kurose_ross/videos/5/>5.5-5.7</a></td>
 <td style=text-align:left></td>
-<td style=text-align:left></td>
 </tr>
 <tr>
 <td style=text-align:left>14</td>
@@ -383,13 +354,11 @@ Table of Contents
 <td style=text-align:left>Wed 12/01/2022</td>
 <td style=text-align:left></td>
 <td style=text-align:left>5</td>
-<td style=text-align:left></td>
 </tr>
 <tr>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left>Thu 13/01/2022</td>
-<td style=text-align:left>The Link Layer and LANs <a href=https://gaia.cs.umass.edu/kurose_ross/videos/6/>6.1-6.3</a></td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 </tr>
@@ -398,54 +367,47 @@ Table of Contents
 <td style=text-align:left>3</td>
 <td style=text-align:left>Wed 19/01/2022</td>
 <td style=text-align:left></td>
-<td style=text-align:left>6</td>
-<td style=text-align:left></td>
+<td style=text-align:left>5</td>
 </tr>
 <tr>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left>Thu 20/01/2022</td>
-<td style=text-align:left>The Link Layer and LANs <a href=https://gaia.cs.umass.edu/kurose_ross/videos/6/>6.3-6.6</a> Retrospective: <a href=https://gaia.cs.umass.edu/kurose_ross/videos/6/>6.7-6.8</a> / Exam Info</td>
-<td style=text-align:left></td>
+<td style=text-align:left>The Link Layer and LANs <a href=https://gaia.cs.umass.edu/kurose_ross/videos/6/>6.1-6.4</a></td>
 <td style=text-align:left></td>
 </tr>
 <tr>
 <td style=text-align:left>16</td>
 <td style=text-align:left>4</td>
-<td style=text-align:left>Wed 26/01/2022</td>
-<td style=text-align:left>PZ 1</td>
-<td style=text-align:left>6</td>
+<td style=text-align:left>Wed 26/01/2022 PZ 1</td>
 <td style=text-align:left></td>
+<td style=text-align:left>6</td>
 </tr>
 <tr>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
-<td style=text-align:left>Thu 27/01/2022</td>
-<td style=text-align:left>PZ 1</td>
-<td style=text-align:left></td>
+<td style=text-align:left>Thu 27/01/2022 PZ 1</td>
+<td style=text-align:left>Exam Info / The Link Layer and LANs <a href=https://gaia.cs.umass.edu/kurose_ross/videos/6/>6.3-6.8</a></td>
 <td style=text-align:left></td>
 </tr>
 <tr>
 <td style=text-align:left>17</td>
 <td style=text-align:left>5</td>
-<td style=text-align:left>Wed 02/02/2022</td>
-<td style=text-align:left>PZ 1</td>
+<td style=text-align:left>Wed 02/02/2022 PZ 1</td>
 <td style=text-align:left></td>
-<td style=text-align:left></td>
+<td style=text-align:left>6</td>
 </tr>
 <tr>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left>Thu 03/02/2022</td>
-<td style=text-align:left>PZ 1</td>
-<td style=text-align:left></td>
+<td style=text-align:left>Exam PZ 1</td>
 <td style=text-align:left></td>
 </tr>
 <tr>
 <td style=text-align:left>18</td>
 <td style=text-align:left>6</td>
 <td style=text-align:left>Wed 09/02/2022</td>
-<td style=text-align:left>PZ 1</td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 </tr>
@@ -453,8 +415,7 @@ Table of Contents
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left>Thu 10/02/2022</td>
-<td style=text-align:left>PZ 1</td>
-<td style=text-align:left></td>
+<td style=text-align:left>Exam PZ 1: Klausureinsicht</td>
 <td style=text-align:left></td>
 </tr>
 </tbody>
