--- a/classes/ws2021/networks/schedule/index.html
+++ b/classes/ws2021/networks/schedule/index.html
@@ -345,7 +345,7 @@ Table of Contents
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left>Thu 06/01/2022</td>
-<td style=text-align:left>The Network Layer: Control Plane <a href=https://gaia.cs.umass.edu/kurose_ross/videos/5/>5.5-5.7</a></td>
+<td style=text-align:left>&ndash;</td>
 <td style=text-align:left></td>
 </tr>
 <tr>
@@ -359,7 +359,7 @@ Table of Contents
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left>Thu 13/01/2022</td>
-<td style=text-align:left></td>
+<td style=text-align:left>The Network Layer: Control Plane <a href=https://gaia.cs.umass.edu/kurose_ross/videos/5/>5.5-5.7</a></td>
 <td style=text-align:left></td>
 </tr>
 <tr>
@@ -416,6 +416,13 @@ Table of Contents
 <td style=text-align:left></td>
 <td style=text-align:left>Thu 10/02/2022</td>
 <td style=text-align:left>Exam PZ 1: Klausureinsicht</td>
+<td style=text-align:left></td>
+</tr>
+<tr>
+<td style=text-align:left></td>
+<td style=text-align:left></td>
+<td style=text-align:left></td>
+<td style=text-align:left></td>
 <td style=text-align:left></td>
 </tr>
 </tbody>
