ready for wise2021/22 bkleinen/bkleinen.github.io@59b7c69bd0f8b8dddcf8366957e64bd822741e1e

--- a/classes/ws2021/info2/labs/lab-13/index.html
+++ b/classes/ws2021/info2/labs/lab-13/index.html
@@ -141,11 +141,7 @@ Table of Contents
 <ul>
 <li><a href=#pre-lab>Pre-Lab</a></li>
 <li><a href=#assignment>Assignment</a></li>
-<li><a href=#lab-report--what-to-turn-in>Lab Report / What to turn in</a>
-<ul>
-<li><a href=#special-questions-for-your-report>Special Questions for your report</a></li>
-</ul>
-</li>
+<li><a href=#lab-report--what-to-turn-in>Lab Report / What to turn in</a></li>
 </ul>
 </nav>
 </div>
@@ -174,17 +170,7 @@ based on the tile rack with 7 letters, split them into collections of 7-, then 6
 </ol>
 <p>Now look back to the shapes exercise last semester - You have come a long way in Java! And you have survived!</p>
 <h2 id=lab-report--what-to-turn-in>Lab Report / What to turn in</h2>
-<p>Your report is due the day before your next lab (for exact times, please refer to moodle).</p>
-<p>Submit a Report in PDF Format and the Source Code as Zipped file.</p>
-<p>As in Informatics 1, I am more interested in process than in product,
-although we are now getting more interested in products as well.
-Your report should include any collaborators on top of the first page,
-summarize what you learned,
-and note the time you invested in this exercise.
-Both of you need to upload the same report in PDF and zipped source format to Moodle before the
-deadline.</p>
-<h3 id=special-questions-for-your-report>Special Questions for your report</h3>
-<p>How many lines of code did you write for each class? Record this statistic in your report.</p>
+<p>All info on the lab reports can be found on the <a href=https://bkleinen.github.io/stagingdrafts/classes/ws2021/info2/labs/>Labs</a> page.</p>
 </div>
 </div>
 </div>
